# course-computational-literary-analysis-readings

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.old  CNAME  README.md  default.nix  icla-readings.cabal  index.html  index2.html  rib-sample.cabal
.github/workflows/: main.yml
content/: garden-party.md  index.md  moonstone.md  syllabus.md
content/.shake/: .shake.database
content/texts/: dubliners.md  garden-party.md  moonstone.md
dest/: index.html  index2.html  syllabus.html
dest/icla/texts/: dubliners.html
dest/misc/: garden-party.txt-chunked.html  garden-party.txt-sunburst.html
dest/texts/: dubliners.html  garden-party.html  index.html  moonstone.html
src/: Main.hs  PandocSidenote.hs  PandocUtils.hs
texts/: dubliners.html  garden-party.html  moonstone.html
