cabal-version: 2.4
name: icla-readings
version: 0.1.0.0
license: BSD-3-Clause
maintainer: jon.reeve@gmail.com
author: Jonathan Revee
category: Web

executable icla-readings
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    other-modules:
        PandocSidenote,
        PandocUtils
    build-depends:
        base,
        aeson,
        clay,
        lucid,
        filepath,
        mtl,
        pandoc,
        pandoc-types,
        relude,
        rib ^>=0.11,
        shake,
        text,
        with-utf8
